--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = third_party/opus/src
 	url = https://chromium.googlesource.com/chromium/deps/opus.git
 	branch = cae696156f1e60006e39821e79a1811ae1933c69
+[submodule "media/cdm/api"]
+	path = media/cdm/api
+	url = https://chromium.googlesource.com/chromium/cdm.git
+	branch = a4773c3cec827c3a880e8a2c22e43a287ced0d20
